--- a/client/index.html
+++ b/client/index.html
@@ -1,21 +1,26 @@
 <head>
-    <title>hello</title>
+    <title>Reports</title>
 </head>
 
-<body>
-<h1>PoliceReport</h1>
 
-{{> index}}
+<template name="mainLayout">
+    <h1>PoliceReport</h1>
+    {{>Template.dynamic template=content}}
+</template>
+<body>
+
 </body>
 
 <template name="index">
-    <button>Aktualisieren</button>
+    <button id="loadData">Refresh Reports</button>
+    <button id="mineData">Mine Data</button>
     <table class="table table-condensed">
         <thead>
         <tr>
             <th>Key</th>
             <th>Headline</th>
-            <th>Text</th>
+            <th>Date</th>
+            <th>Station</th>
         </tr>
         </thead>
         {{#each reports}}
@@ -28,6 +33,16 @@
     <tr>
         <td>{{key}}</td>
         <td>{{headline}}</td>
-        <td>{{text}}</td>
+        <td>{{station}}</td>
+        <td>{{date}}</td>
+        <td><a href="/details/{{_id}}">Details</a></td>
     </tr>
+</template>
+
+<template name="details">
+    {{#with report}}
+        <h1>{{headline}}</h1>
+        <h2>{{date}}, Station: {{station}}</h2>
+        <p>{{{text}}}</p>
+    {{/with}}
 </template>
