matching wiht fuzzy

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 <template name="index">
     <button id="load-data">Scrap Reports</button>
     <button id="name-entity-recognition">Name Entity Recognition</button>
-    <button id="word2vec">...</button>
+    <button id="bagOfWords">Bag of words</button>
     {{#if isLoading}}
         {{counter}}
         {{>loading}}
