--- a/client/index.html
+++ b/client/index.html
@@ -16,14 +16,15 @@
 <template name="index">
     <button id="load-data">Scrap Reports</button>
     <button id="name-entity-recognition">Name Entity Recognition</button>
+    <button id="w2v-name-entity-recognition">Synonym Name Entity Recognition</button>
     <button id="bagOfWords">Bag of words</button>
     {{#if isLoading}}
-        {{counter}}
+        Scrapped: {{counter}}
         {{>loading}}
     {{else}}
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-2">{{categorisedCount}}/{{elementCount}} => {{categorisedPercent}} %</div>
+                <div class="col-xs-2">Categorised: {{categorisedCount}}/{{elementCount}} => {{categorisedPercent}} %</div>
                 <div class="col-xs-2"></div>
             </div>
             <div class="row">
@@ -31,6 +32,7 @@
                     <thead>
                     <tr>
                         <th>Headline</th>
+                        <th>Category</th>
                         <th>Date</th>
                         <th>City</th>
                         <th>Station</th>
@@ -51,6 +53,7 @@
 <template name="report">
     <tr>
         <td>{{headline}}</td>
+        <td>{{#if category.entity}}{{category.entity}} (Score: {{category.score}}){{/if}}</td>
         <td>{{date timestamp}}</td>
         <td>{{location_detail.city}}</td>
         <td>{{station}}</td>
