added dumps deactivated scrapper

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     {{else}}
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-2">Categorised: {{categorisedCount}}/{{elementCount}} => {{categorisedPercent}} %</div>
+                <div class="col-xs-2">Categorised: {{categorisedCount}}/{{elementCount}} => {{categorisedPercent}} % ({{unsafeCategorisedPercent}} %)</div>
                 <div class="col-xs-2"></div>
             </div>
             <div class="row">
