--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,8 @@
 <template name="index">
     <button id="load-data">Scrap Reports</button>
     <button id="reset-data">Reset</button>
-    {{#if password}}<input id="password" type="password"/><button id="reset-data-confirm">Confirm</button>{{/if}}
+    {{#if password}}<input id="password" type="password"/>
+        <button id="reset-data-confirm">Confirm</button>{{/if}}
     <button id="name-entity-recognition">Name Entity Recognition</button>
     <button id="w2v-name-entity-recognition">Synonym Name Entity Recognition</button>
     <!--<button id="bagOfWords">Bag of words</button>-->
@@ -26,7 +27,9 @@
     {{else}}
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-2">Categorised: {{categorisedCount}}/{{elementCount}} => {{categorisedPercent}} % ({{unsafeCategorisedPercent}} %)</div>
+                <div class="col-xs-2">Categorised: {{categorisedCount}}/{{elementCount}} => {{categorisedPercent}} %
+                    ({{unsafeCategorisedPercent}} %)
+                </div>
                 <div class="col-xs-2"></div>
             </div>
             <div class="row">
@@ -193,7 +196,8 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -206,7 +210,8 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/map">Map (WIP)</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Statistics <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Statistics <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/stats">Burglary</a></li>
                         </ul>
@@ -219,4 +224,19 @@
             </div>
         </div>
     </nav>
+</template>
+
+<template name="impressum">
+    <h2>Impressum</h2>
+    <address>
+        <strong>B.Eng. Daniel Budick</strong><br/>
+        Speyerer Straße 1<br/>
+        90443 Nürnberg
+    </address>
+    Telefon: +49 (0)911 - 980 328 48 / E-Mail: daniel@budick.eu<br/>
+
+    <h3>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE294240378</h3>
+
+    <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
+    Daniel Budick, Speyerer Straße, 1 90443 Nürnberg
 </template>
