--- a/client/index.html
+++ b/client/index.html
@@ -213,7 +213,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">Statistics <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/stats">Burglary</a></li>
+                            <li><a href="/stats/burglaries">Burglary</a></li>
+                            <li><a href="/stats/accidents">Traffic Accidents</a></li>
                         </ul>
                     </li>
                     <li><a href="/impressum">Impressum</a></li>
