--- a/client/statistics.html
+++ b/client/statistics.html
@@ -1,4 +1,9 @@
-<template name="statistics">
+<template name="burglaries">
     <h2>Einbrüche</h2>
-    <canvas id="burglaries" width="400" height="400"></canvas>
+    <canvas id="chart-burglaries" width="400" height="400"></canvas>
+</template>
+
+<template name="accidents">
+    <h2>Verkehrsunfälle</h2>
+    <canvas id="chart-accidents" width="400" height="400"></canvas>
 </template>
