--- a/client/index.html
+++ b/client/index.html
@@ -230,7 +230,7 @@
 <template name="impressum">
     <h2>Impressum</h2>
     <address>
-        <strong>B.Eng. Daniel Budick</strong><br/>
+        <strong>Daniel Budick, B.Eng.</strong><br/>
         Speyerer Straße 1<br/>
         90443 Nürnberg
     </address>
